# django_perms_prod

./: Dockerfile  db.sqlite3  docker-compose.yml  pyproject.toml  readme.md
cars/: models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
cars/migrations/: 0001_initial.py  0002_auto_20200918_0214.py
jwt_django/: asgi.py  settings.py  urls.py  wsgi.py
